docs/sf-export/sfdx-raw/objects/LegacyCRMLead__c/LegacyCRMLead__c.object-meta.xml
<CustomObject>
    <label>Legacy CRM Lead</label>
    <nameField>
        <displayFormat>CRMLead-{0000}</displayFormat>
        <label>LegacyCRMLead Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Legacy CRM Leads</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>