docs/sf-export/sfdx-raw/objects/LegacyCRMLead__c/fields/Closer__c.field-meta.xml
<CustomField>
    <fullName>Closer__c</fullName>
    <label>Closer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>