docs/sf-export/sfdx-raw/objects/LegacyCRMLead__c/fields/Converted_to_Contact__c.field-meta.xml
<CustomField>
    <fullName>Converted_to_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Converted to Contact</label>
    <type>Checkbox</type>
</CustomField>