docs/sf-export/sfdx-raw/objects/LegacyCRMLead__c/fields/Converted_to_OpportunityContactRole__c.field-meta.xml
<CustomField>
    <fullName>Converted_to_OpportunityContactRole__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Converted to OpportunityContactRole</label>
    <type>Checkbox</type>
</CustomField>