docs/sf-export/sfdx-raw/objects/LegacyCRMLead__c/fields/CountryCode__c.field-meta.xml
<CustomField>
    <fullName>CountryCode__c</fullName>
    <label>CountryCode</label>
    <length>2</length>
    <type>Text</type>
</CustomField>