docs/sf-export/sfdx-raw/objects/LegacyCRMLead__c/fields/Fronter__c.field-meta.xml
<CustomField>
    <fullName>Fronter__c</fullName>
    <label>Fronter</label>
    <length>255</length>
    <type>Text</type>
</CustomField>