docs/sf-export/sfdx-raw/objects/LegacyCRMLead__c/fields/IsConverted__c.field-meta.xml
<CustomField>
    <fullName>IsConverted__c</fullName>
    <formula>OR( Converted_to_Lead__c, AND (Converted_to_Contact__c, Converted_to_Account__c, Converted_to_Opportunity__c,  Converted_to_Program_Plan__c, Converted_to_OpportunityContactRole__c ))</formula>
    <label>IsConverted</label>
    <type>Checkbox</type>
</CustomField>