docs/sf-export/sfdx-raw/objects/LegacyCRMLead__c/fields/LastDispo__c.field-meta.xml
<CustomField>
    <fullName>LastDispo__c</fullName>
    <label>LastDispo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>