docs/sf-export/sfdx-raw/objects/LegacyCRMLead__c/fields/LeadDate__c.field-meta.xml
<CustomField>
    <fullName>LeadDate__c</fullName>
    <label>LeadDate</label>
    <type>Date</type>
</CustomField>