docs/sf-export/sfdx-raw/objects/LegacyCRMLead__c/fields/LeadId__c.field-meta.xml
<CustomField>
    <fullName>LeadId__c</fullName>
    <label>LeadId</label>
    <length>20</length>
    <type>Text</type>
</CustomField>