docs/sf-export/sfdx-raw/objects/LegacyCRMLead__c/fields/LeadSource__c.field-meta.xml
<CustomField>
    <fullName>LeadSource__c</fullName>
    <label>LeadSource</label>
    <length>255</length>
    <type>Text</type>
</CustomField>