docs/sf-export/sfdx-raw/objects/LegacyCRMLead__c/fields/Phone1__c.field-meta.xml
<CustomField>
    <fullName>Phone1__c</fullName>
    <label>Phone1</label>
    <length>10</length>
    <type>Text</type>
</CustomField>