docs/sf-export/sfdx-raw/objects/LegacyCRMLead__c/fields/Phone2__c.field-meta.xml
<CustomField>
    <fullName>Phone2__c</fullName>
    <label>Phone2</label>
    <length>10</length>
    <type>Text</type>
</CustomField>